# kv-be-python-fastapi-dataapi-table

./: .cursorrules.json  .gitignore  README.md  env.example  out.txt  pyproject.toml
.cursor/rules/: github.mdc
.github/workflows/: build.yaml  dashboard-lint.yml  load_test.yml
app/: main.py  main_account.py  main_comment.py  main_comments_ratings.py  main_moderation.py  main_reco.py  main_recommendations.py  main_search.py  main_user.py  main_video.py  main_video_catalog.py  metrics.py  version.py
app/api/v1/: dependencies.py
app/api/v1/endpoints/: account_management.py  comments_ratings.py  flags.py  moderation.py  reco_internal.py  recommendations_feed.py  search_catalog.py  test_comments_ratings.py  video_catalog.py
app/core/: config.py  security.py
app/db/: astra_client.py
app/external_services/: sentiment_mock.py  youtube_metadata.py  youtube_mock.py
app/models/: __init__.py  comment.py  common.py  flag.py  rating.py  recommendation.py  user.py  video.py
app/services/: __init__.py  comment_service.py  embedding_service.py  flag_service.py  rating_service.py  recommendation_service.py  user_service.py  vector_search_utils.py  video_service.py
app/utils/: db_helpers.py  db_instrumentation.py  observability.py  text.py
docs/: acceptance_testing_plan.md  killrvideo_openapi.yaml  observability.md  remaining_work.md  schema-astra.cql  vector_search.md  youtube_metadata_details.md
docs/build prompts/: Acceptance Testing.md  Epic 1.md  Epic 2.md  Epic 3.md  Epic 4.md  Epic 5.md  Epic 6.md  Epic 7.md  Epic 8.md
docs/build_prompts/vector_search/: prompts.md
docs/grafana/: api_latency_by_route.json  astra_db_calls.json  backend_hot_path.json
frontend/: package.json
frontend/components/: SemanticSearchBar.tsx  VideoCard.tsx
frontend/cypress/e2e/: semantic_search.cy.ts
load/: semantic_search.py
migrations/: 2025_08_vector.cql  2025_08_vector.json
scripts/: attach_nvidia_vector_index.py  backfill_vectors.py  enable_vector_flag.py  generate_openapi.py  run_load_test.py
services_dockerfiles/: account_management.Dockerfile  comment.Dockerfile  reco.Dockerfile  user.Dockerfile  video.Dockerfile  video_catalog.Dockerfile
tests/: conftest.py  test_main.py
tests/api/: test_search_endpoint.py
tests/api/v1/: test_dependencies.py
tests/api/v1/endpoints/: test_account_management.py  test_comments_ratings.py  test_flags.py  test_moderation.py  test_reco_internal.py  test_recommendations_feed.py  test_related_videos.py  test_search_catalog.py  test_video_catalog.py
tests/core/: test_config.py  test_security.py
tests/db/: test_astra_client.py
tests/e2e/: test_semantic_search.py
tests/external_services/: test_sentiment_mock.py  test_youtube_mock.py
tests/models/: test_flag.py
tests/scripts/: test_backfill_vectors.py
tests/services/: test_comment_service.py  test_flag_service.py  test_prometheus_metrics_route.py  test_rating_service.py  test_recommendation_service.py  test_user_service.py  test_video_semantic_search.py  test_video_service.py  test_video_vector_ingest.py
tests/utils/: test_logging_handlers.py  test_otlp_protocol_switch.py  test_text.py
