[tool.poetry]
name = "killrvideo-python-fastapi-backend"
version = "2.0.0-alpha"
description = "KillrVideo Python FastAPI Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.115.12"
uvicorn = {extras = ["standard"], version = ">=0.34.2"}
pydantic-settings = ">=2.9.1"
python-jose = {extras = ["cryptography"], version = ">=3.5.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
astrapy = ">=2.0.1"
cassandra-driver = ">=3.29.2"
requests = ">=2.31.0"
sentence-transformers = ">=3.0.0"
torch = ">=2.0.0"

# Observability / telemetry
prometheus-fastapi-instrumentator = ">=6.2.1"
opentelemetry-api = ">=1.25.0"
opentelemetry-sdk = ">=1.25.0"
opentelemetry-exporter-otlp = ">=1.25.0"
opentelemetry-instrumentation-fastapi = ">=0.44b0"
opentelemetry-instrumentation-logging = ">=0.44b0"
python-logging-loki = ">=0.3.1"
python-json-logger = ">=2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
mypy = "^1.16.0"
ruff = "^0.11.12"
email-validator = "^2.2.0"
pyyaml = {version = "^6.0", optional = false}
python-dotenv = "^1.1.0"
locust = "^2.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff configuration
# ---------------------------------------------------------------------------

[tool.ruff]
lint.extend-ignore = ["E402", "E702"]

[tool.poetry.scripts]
gen-openapi = "scripts.generate_openapi:main"
run-load-test = "scripts.run_load_test:main"
